--- a/public/themes/saga-purple/theme.css
+++ b/public/themes/saga-purple/theme.css
@@ -2460,7 +2460,7 @@
 }
 .p-fileupload .p-fileupload-content {
   background: #ffffff;
-  padding: 1rem;
+  padding: 2rem 1rem;
   border: 1px solid #dee2e6;
   color: #495057;
   border-bottom-right-radius: 3px;
@@ -2468,6 +2468,9 @@
 }
 .p-fileupload .p-progressbar {
   height: 0.25rem;
+}
+.p-fileupload .p-fileupload-row > div {
+  margin-right: 0.5rem;
 }
 
 .p-fileupload-choose:not(.p-disabled):hover {
